--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "formik": "^2.1.4",
     "node-sass": "^4.14.1",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1"
   }
 }
