--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.4.0",
+    "cross-fetch": "^3.0.5",
     "formik": "^2.1.4",
     "node-sass": "^4.14.1",
     "react-icons": "^3.10.0",
