--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-fetch": "^3.0.5",
     "formik": "^2.1.4",
     "node-sass": "^4.14.1",
+    "react-filter-search": "^1.0.11",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
