--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
+    "react-webworker": "^2.1.0",
     "redux": "^4.0.5",
     "styled-components": "^5.1.1"
   }
